# sepsis_osc

./: .gitattributes  .gitignore  LICENSE  README.md  batched_jrk_sim.py  config.py  jrk_sim.py  logger.py  pyproject.toml  requirements.txt  run_simulation.py  simulation.py  storage.py  trk_sim.py  viz.py
data/DaisyFinalSepsisMetrics.db/: 000016.sst  000042.sst  IDENTITY  LOG  LOG.old.1757665841025481  LOG.old.1757665920791211  LOG.old.1758178281415778  LOG.old.1767350120587041  LOG.old.1767350375640834  LOG.old.1767350418061261  LOG.old.1767350463324660  LOG.old.1767350493489133  LOG.old.1767538053154922  LOG.old.1767539120791109  LOG.old.1767541834260082  LOG.old.1767547331903413  LOG.old.1767549575138582  (+641 more)
misc/: DNM_plots.ipynb  LDM_plots.ipynb  Presentation.ipynb  cohort_exploration.ipynb  cohort_stats.R  custom_sepsis_yaib_cohort.py  merge_storages.py  notebook_CV.py  notebook_DNM.py  notebook_LDM.py  notebook_cohort.py  notebook_external.py  notebook_others.py  notebook_paper.py  notebook_presentation.py  notebook_project.py  pysr_fit.py  yaib_cohort.py  yaib_cohort_script.py
simulation/: data_classes.py  simulation.py
storage/: storage_interface.py
typst/: bibliography.bib  idea.typ  ieee_custom.csl  main.typ  main_poster.typ  main_project.typ  main_thesis.typ  method.typ  poster_template.typ  presentation.typ  thesis_env.typ  thesis_template.typ  titlepage_template.typ  tree.typ  tuhh_colors.typ  tuhh_template.typ
utils/: config.py  jax_config.py  logger.py  merge_storages.py  run_simulation.py  viz_ensemble_run.py  viz_param_space.py  viz_single_run.py
(+116 files in other folders)
